# yada

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCS.md  LICENSE  README.md  TECH_PLAN.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCS.md  PLAN.md  ROADMAP.md  SECURITY_PRIVACY.md  TROUBLESHOOTING.md  linux-progress-2026-02-14.md  macos-contributing.md  windows-contributing.md
research/: .gitignore  README.md  env_utils.py  groq_pipeline.py  openai_pipeline.py  pipeline_common.py  pipeline_runner_core.py  pyproject.toml  record_and_run.py  record_and_run_pipeline.py  record_flac.py  recording_core.py  run_pipelines.py  speech_pipeline_compare.py  testing_sentences.md
scripts/: package_release_zip.sh
yada-linux/: .gitignore  Cargo.toml  README.md
yada-linux/crates/yada-core/: Cargo.toml
yada-linux/crates/yada-core/src/: audio.rs  audio_capture.rs  config.rs  lib.rs  openai.rs
yada-linux/crates/yada-daemon/: Cargo.toml
yada-linux/crates/yada-settings-ui/: Cargo.toml
yada-linux/ibus-engine/: yada-linux.xml.in  yada_engine.py
yada-linux/scripts/: install_dev_ibus.sh  restart_ibus_dev.sh
yada-windows/: Yada.Windows.sln
yada-windows/Yada.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Yada.Windows.csproj  app.manifest
yada-windows/Yada.Windows/Models/: AppDefaults.cs  AppStatus.cs  AudioInputDevice.cs  (+5 more)
yada/yada/: AppCore.swift  ContentView.swift  HotKey.swift  yadaApp.swift
yada/yada.xcodeproj/: project.pbxproj
yada/yadaTests/: yadaTests.swift
yada/yadaUITests/: yadaUITests.swift  yadaUITestsLaunchTests.swift
(+34 files in other folders)
