[package]
name = "yada-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.16"
toml = "0.8.20"
directories = "5.0.1"
cpal = "0.15.3"
